# semla

./: LICENSE  README.md  config.txt  create_assistant.py  daal  dyaclaude.py  faissidx.py  pyproject.toml  semla  semla-ws.py  semla.dyalog
